--- a/applications.tex
+++ b/applications.tex
@@ -63,7 +63,7 @@ Application parameters \textit{PROCROWS, PROCCOLS, ROWBLOCK} and \textit{COLBLOC
 
 \fi
 
-\textit{Note}: These IPF codes are not published with open access on the Internet yet.
+\textit{Note}: Above-mentioned IPF codes are not published with open access on the Internet yet.
 
 \paragraph{ABM4Py/GG} (ABMS for Python) is a distributed agent-based modelling and simulation framework for fast prototyping agent based components of GSS models \cite{2018:abm4py}.
 Agent-based models implemented in \textsf{ABM4Py} follow the graph-based representation \cite{2018:abm4py,2017:graph_abms}.
