--- a/introduction.tex
+++ b/introduction.tex
@@ -4,10 +4,10 @@ The set of tested applications (called a \textit{GSS benchmark} here) covers man
 
 The rest of the paper is organized as follows.
 Section\,\ref{sec:benchmark} describes benchmark and the experimental setup.
-More specifically, we introduce applications chosen for the benchmarked and motivate this choice,
+More specifically, we introduce applications chosen for the benchmark and motivate this choice,
 present technical overview of the testbeds where the tests were launched,
 and discuss approach selected for measuring performance metrics.
-In Section\,\ref{sec:analysis}, we overview main benchmarking results.
+In Section\,\ref{sec:analysis}, we shortly overview main benchmarking results.
 In particular, we emphasize on the applicability of those results for the hardware/software co-design.
 Section\,\ref{sec:summary} contains statements for the most relevant conclusions.
-Finally, we end our paper with formulation of the directions for furure research.
+Finally, we end our paper with formulation of the directions for future research.
