--- a/paper.tex
+++ b/paper.tex
@@ -4,7 +4,7 @@
 
 \documentclass{superfri}
 \usepackage{scrextend}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
 \usepackage{multirow}
