--- a/measuring.tex
+++ b/measuring.tex
@@ -54,7 +54,7 @@ Last but not least,
 our testbeds were limited by 1-2 nodes,
 which is not enough to conduct full scalability experiments with some of the selected applications.
 In order to ovecome this obstacle,
-as a reference testbed we used the Eagle cluster equipped with @TODO nodes containing 2 16-core Intel Haswell E5-2697 v3 CPUs each,
+as a reference testbed we used the Eagle cluster equipped with 50 nodes containing 2 14-core Intel Haswell E5-2697 v3 CPUs each,
 where we performed tests up to reaching the scalability bound.
 It allowed us to get an impression on the scalability of the applications reflected in Tables\,\ref{tab:bottlenecks_hardware} and~\ref{tab:bottlenecks_cfd_hardware}.
 
