--- a/applications.tex
+++ b/applications.tex
@@ -3,11 +3,7 @@
 % The applications have been selected both from projects provided by the project and generally available in public repositories.
 Functionally, the benchmarked applications can be categorized into two groups: HPC-
 compliant social simulation software and large-scale CFD (Computational Fluid Dynamics)
-applications. From the perspective of programming languages, GSS benchmark covered ap-
-plications written in C++ and Python, which are the most popular programming languages
-among GSS experts who use HPC. This subsection contains a short description of tested appli-
-cations -- ABM4Py/GG, Pandora/GG, IPF, OpenSWPC, CCTM, CM1, HWRF, -- and explains why
-these particular applications were selected for the benchmark.
+applications. From the perspective of programming languages, GSS benchmark covered applications written in C++ and Python, which are the most popular programming languages among GSS experts who use HPC. This subsection contains a short description of tested applications -- ABM4Py/GG, Pandora/GG, IPF, OpenSWPC, CCTM, CM1, HWRF, -- and explains why these particular applications were selected for the benchmark.
 We refer the interested reader for further technical details to the reports \cite{2017:coegss_benchmark1,2018:coegss_benchmark2}.
 
 \subsubsection{HPC-compliant social simulation software}
@@ -135,10 +131,7 @@ In general, the characteristic of the applications is found to be different and 
 
 \subsubsection{Large-scale CFD applications}
 
-A wide variaty of GSS applications -- from evacuation planning \cite{2011:Epstein} to air quality control \cite{CHEMEL2014410} –
-rely on coupling of ABMS with CFD. The group of benchmarked CFD applications includes large
-scale tools that simulate GSS-related scenarios like natural disasters (hurricanes, earthquakes),
-spread of air pollution, and weather prediction. We selected 4 exemplar open-source codes for
+A wide variaty of GSS applications -- from evacuation planning \cite{2011:Epstein} to air quality control \cite{CHEMEL2014410} - rely on coupling of ABMS with CFD. The group of benchmarked CFD applications includes large scale tools that simulate GSS-related scenarios like natural disasters (hurricanes, earthquakes), spread of air pollution, and weather prediction. We selected 4 exemplary open-source codes for
 large-scale CFD simulations:
 \begin{itemize}
 \item OpenSWPC -- an integrated parallel simulation code for modelling seismic wave propaga-
