--- a/measuring.tex
+++ b/measuring.tex
@@ -19,7 +19,7 @@ On the other hand, our study is focused on overall performance of the code
 and does not require instrumentation to measure and analyze performance.
 Thus, we decided to omit specialized benchmarking libraries (e.g., \textsf{LibSciBench} \cite{2015:Hoefler})
 and performance analysis tools (e.g., VampirTrace)
-in favor of standard Linux toolset available out-of-the-box.
+in favour of standard Linux toolset available out-of-the-box.
 The metrics of interest were measured by means of \texttt{/usr/bin/time} Linux utility.
 This utility allows to measure the following metrics for the application as a whole and for each separate MPI process:
 total elapsed real time, number of filesystem inputs and outputs,
