Plot 3a fixed and Power8+ comment added

--- a/summary.tex
+++ b/summary.tex
@@ -2,7 +2,7 @@ The findings of this work allowed the authors to formulate the following conclus
 \begin{itemize}
   \item[\textbullet]Among all tested applications IPF is the least I/O demanding. For the reference architecture it shows scalability up to 700 cores. On the other hand, other selected processors scale in the range of the number of physical cores so we expect that using them in a multinode configuration will result in similar behaviour as for the reference testbed.
   \item[\textbullet]Green Growth-pilot applications are dominated by I/O operations (mostly output) where a large HDF5 file is created and to which all processes save data;
-  \item[\textbullet]Results obtained for ABMS4py – another social simulation application prove it should be subject to major improvements. For instance, the best execution time on Intel\textregistered\ Xeon\textregistered\ Gold 6140 is observed for only 9 MPI processes, whereas the testbed includes 72 physical cores (2-node configuration with 2 chips each, 18 cores per one chip)
+  \item[\textbullet]Results obtained for ABMS4py - another social simulation application prove it should be subject to major improvements. For instance, the best execution time on Intel\textregistered\ Xeon\textregistered\ Gold 6140 is observed for only 9 MPI processes, whereas the testbed includes 72 physical cores (2-node configuration with 2 chips each, 18 cores per one chip)
   \item[\textbullet]OpenSWPC benchmark for given input configuration reports good scalability. It is especially illuminative in case of the reference testbed where the execution time decreases along number of cores used until maximum number of 1400 is used. Other processors show similar behaviour. Using hyper threads (where possible) does not provide any further time improvements.
   \item[\textbullet]CCTM is I/O dominated (especially output) application and, thus, the impact on the execution times is high
   \item[\textbullet]CM1 results indicate a relationship between the problem size (weather map grid) and the processors mesh, as well as the dependence between the number of threads and nesting of cores in different levels of cache. 
@@ -33,8 +33,8 @@ For the final comparative analysis two additional metrics have been introduced:
      	ymin=0,
     	legend style={at={(0.5,-0.2)},
     	    anchor=north,legend columns=2},
-        ybar=0pt,
-        bar width=5pt
+      ybar=0pt,
+      bar width=0.15cm, width=1.0\textwidth
     ]
     %Arm
     \addplot[black, pattern=horizontal lines]
@@ -166,9 +166,9 @@ By looking at the aggregated execution times across all tested applications, the
 
 For the \textit{estimated cumulative energy consumption} (calculated as a sum of walltimes and TDP per used cores products expressed in kilowatt-hours) metric the winning processor is ARM Hi1616 representing the current tendency in HPC, where attention is turned to - generally speaking - energy efficient technologies. The second place winner is Intel\textregistered Xeon\textregistered\ Gold 6140 and Power8+ brings up the rear (Figure~\subref{fig:estimatedenergyconsumption}). 
 
-The estimated power consumption chart is a good point of view when talking about green HPC computing. The presented results not exact, because they are dictated only by the estimated values based on the CPU's TDP. Nevertheless, assuming that all architectures use the same memory model - DDR4, it can be considered that most of the energy consumed is the energy utilized by the processor. In this scope, the best energy consumption ratio is characterized by the ARM architecture, which is absolutely designed for energy-saving solutions that is also widely used in mobile devices. The results for the new Intel Skylake architecture were a big surprise, which took the second place with a very similar result of about 20\% more. The AMD Epyc\textsuperscript{TM} presented a much worse result, but from our observations its internal architecture is better suited to applications in which I/O systems play an important role.
+The estimated power consumption chart is a good point of view when talking about green HPC computing. The presented results not exact, because they are dictated only by the estimated values based on the CPU's TDP. Nevertheless, assuming that almost all architectures use the same memory model - DDR4, it can be considered that most of the energy consumed is the energy utilized by the processor. In this scope, the best energy consumption ratio is characterized by the ARM architecture, which is absolutely designed for energy-saving solutions that is also widely used in mobile devices. The results for the new Intel Skylake architecture were a big surprise, which took the second place with a very similar result of about 20\% more. The AMD Epyc\textsuperscript{TM} presented a much worse result, but from our observations its internal architecture is better suited to applications in which I/O systems play an important role.
 
-Another valuable finding is based on GSS cost efficiency analysis (Figure~\subref{fig:costefficiency}). ARM Hi1616 turned out to be approximately 9 times better than for Power8+ and 15 times better than the reference Intel\textregistered\ Xeon\textregistered\ E5-2697 processor, mostly due to its small number of expensive cores and relatively middling timing results.
+Another valuable finding is based on GSS cost efficiency analysis (Figure~\subref{fig:costefficiency}). ARM Hi1616 turned out to be approximately 9 times better than for Power8+ (with DDR3 and not utilized NVLinks) and 15 times better than the reference Intel\textregistered\ Xeon\textregistered\ E5-2697 processor, mostly due to its small number of expensive cores and relatively middling timing results.
 Additionally, when talking about general processor characteristics extracted from all the tests performed, IBM Power8+ demonstrates particularly good performance for the applications with a big number of I/O such as Pandora, OpenSWPC, CMAQ/CCTM. The best results are obtained when the total output dominates over the input and RAM consumption. In many cases, it outperforms ARM Hi1616, Intel\textregistered\ Xeon\textregistered\ E5-2697, and AMD Epyc\textsuperscript{TM} for I/O intensive applications. On the other hand, Power8+ shows worse results than the above-mentioned processors if the applications are computationally extensive while producing a relatively small amount of output. This is the case of the IPF and ABMS applications. On all processors, all benchmarks show the highest efficiency if the number of MPI processes is between 2 and the total number of physical cores. After that, the efficiency usually drops remarkably as hyper threading is not utilised properly. At the same time, quite often the highest speedup is reached when the number of MPI processes is significantly more than 20. It would be interesting to perform the tests on the testbeds including more nodes. 
 
 
